<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/main_menu_0">

        <menu>
            <item
                android:id="@+id/go_activity"
                android:title="@string/activity" />
            <item
                android:id="@+id/go_service"
                android:title="@string/service" />
            <item
                android:id="@+id/go_broadcast"
                android:title="@string/broadcast_receiver" />
        </menu>


    </item>
    <item android:title="@string/main_menu_1">

        <menu>
            <item
                android:id="@+id/go_layout"
                android:title="@string/layout" />
            <item
                android:id="@+id/go_resources"
                android:title="@string/resources" />
        </menu>


    </item>
</menu>